gitops/tools/apps/atuin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  namespace: atuin
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: atuin
      port:
        number: 8888
  tls:
    - hosts:
        - atuin
